# halludomainbenchandsafeguard

./: .gitignore  README.md  collect.py  new_dataset.json  pyproject.toml  report.py  run_all.py  sample_all_quantity_variants.json  verify.py  verify2.py
SafeEntryGuard/: .gitignore  README.md  pyproject.toml
SafeEntryGuard/configs/: guard.default.json  guard.legacy330.highrisk.json
SafeEntryGuard/docs/: research_notes.md
SafeEntryGuard/safeentryguard/: __main__.py  api.py  cli.py  config.py  domain_intel.py  extractors.py  guard.py  policy.py  schemas.py  truth_store.py  utils.py  verifier.py
SafeEntryGuard/tests/: test_api.py  test_extractors.py  test_guard.py  test_truth_store.py
ai_HalluDomainBench-main/: README.md  api_client.py  collect.py  pyproject.toml  report.py  run_all.py  verify.py  verify2.py
ai_HalluDomainBench-main/configs/: benchmark.default.json  benchmark.paper.json  models.registry.v2.json  models.siliconflow.v1.json  validation_profiles.v1.json
ai_HalluDomainBench-main/docs/: evaluation_method_and_future_work.md  legacy330_highrisk_experiment_analysis.md
ai_HalluDomainBench-main/halludomainbench/: cli.py  config.py  dataset.py  dataset_variants.py  domain_intel.py  experiment_assets.py  extractors.py  legacy_cli.py  legacy_migration.py  models.py  pipeline.py  providers.py  risk.py  schemas.py  scoring.py  semantic.py  starter_assets.py  taxonomy.py  truth.py  utils.py  validation_profiles.py  validators.py
ai_HalluDomainBench-main/scripts/: run_experiment.ps1  run_legacy330_highrisk.ps1  run_main5.ps1
configs/: benchmark.paper.json  (+1 more)
(+99 files in other folders)
